@@ -140,9 +140,21 @@ tcp_sock_speed_limit
 
 Set speed limit for each tcp socket.
 
-**default**: no limit, **alias**: tcp_conn_speed_limit | tcp_conn_limit
+**default**: no limit
 
-.. versionchanged:: 1.4.0 changed name to tcp_sock_speed_limit
+tcp_conn_speed_limit
+--------------------
+
+**deprecated**
+
+.. versionchanged:: 1.11.8 deprecated, use tcp_sock_speed_limit instead
+
+tcp_conn_limit
+--------------
+
+**deprecated**
+
+.. versionchanged:: 1.11.8 deprecated, use tcp_sock_speed_limit instead
 
 udp_sock_speed_limit
 ---------------------
@@ -151,9 +163,21 @@ udp_sock_speed_limit
 
 Set speed limit for each udp socket.
 
-**default**: no limit, **alias**: udp_relay_speed_limit | udp_relay_limit
+**default**: no limit
 
-.. versionchanged:: 1.4.0 changed name to udp_sock_speed_limit
+udp_relay_speed_limit
+---------------------
+
+**deprecated**
+
+.. versionchanged:: 1.11.8 deprecated, use udp_sock_speed_limit instead
+
+udp_relay_limit
+---------------
+
+**deprecated**
+
+.. versionchanged:: 1.11.8 deprecated, use udp_sock_speed_limit instead
 
 tcp_all_upload_speed_limit
 --------------------------
